cli/tests/snapshots/real/07-lifecycle/00-resized.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>        …                  [— / —] [Dashboard]

> 第一轮：测试真实流式输出、中文和 Emoji

● 真实 TCP 流式第一段 🌊，随后完成长文本与代码 fn main() {}

> 第二轮：在第一轮运行时排队

● 第二轮排队消息已经执行。

  ⏸ Manual               /permission to change permissions
  ────────────────────────────────────────────────────────
  >
  ───────────────────────────────────── ash-real-scenario

  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
