cli/tests/snapshots/real/07-lifecycle/03-http-500.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                                …                          [Dashboard]

> 触发真实 HTTP 500

● Provider request failed (500). Try again later.






















  ────────────────────────────────────────────────────────────────────────────────────────────────
  >
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  ⏸ Manual · ← Dashboard · ? for shortcuts
