cli/tests/snapshots/real/07-lifecycle/05-dictation-download-cancelled.snap
---
source: cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                                …                          [Dashboard]

























                                                                                Dictation stopped.
  ────────────────────────────────────────────────────────────────────────────────────────────────
  > KEEP-DICTATION-DRAFT
  ───────────────────────────────────────────────────────────────────────────── ash-real-scenario

  ⏸ Manual
